[workspace]

[package]
name = "peek-poke"
version = "0.2.0"
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
euclid = { version = "*", optional = true }
peek-poke-derive = { version = "0.2", path = "./peek-poke-derive", optional = true }

[dev-dependencies]
bincode = "1.1"
criterion = "0.2"
serde = "1.0"
serde_derive = { git = "https://github.com/servo/serde", branch = "deserialize_from_enums10", features = ["deserialize_in_place"] }

[features]
default = ["derive"]
derive = ["peek-poke-derive"]
extras = ["derive", "euclid"]
option_copy = []
option_default = []

[[bench]]
name = "copy_versus_bincode"
harness = false
required-features = ["option_copy"]

[[bench]]
name = "default_versus_bincode"
harness = false
required-features = ["option_default"]

[profile.release]
opt-level = 2